--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^12.0.5",
     "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.2.2",
