--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-signature-canvas": "^1.0.5",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
