--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "leaflet": "^1.8.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-dropzone": "^12.0.5",
+    "react-leaflet": "^4.0.0",
     "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.2.2",
