--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-dropzone": "^12.0.5",
+    "react-hide-on-scroll": "^1.1.4",
     "react-leaflet": "^4.0.0",
     "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.0",
